// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uglyEbayItem should return table without image 1`] = `
"
    <tr>
      <td width=\\"260\\" valign=\\"top\\">
        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" width=\\"100%\\">
          <tr style=\\"cursor:pointer\\"
            onclick=\\"window.open('http://www.some-url.com')\\">
            
            <td style=\\"padding: 0 0 0 0;\\">
              <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
                <tr>
                  <td style=\\"padding: 0 0 0 0;\\">
                    some product
                  </td>
                <tr>
                  <td style=\\"padding: 0 0 0 0;\\">
                    US $12,00
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </td>
    </tr>"
`;

exports[`uglyEbayItem should return table without image 2`] = `
"
    <tr>
      <td width=\\"260\\" valign=\\"top\\">
        <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" width=\\"100%\\">
          <tr style=\\"cursor:pointer\\"
            onclick=\\"window.open('http://www.some-url.com')\\">
            <td><img src=\\"http://www.some-image-url.com\\" alt=\\"\\" width=\\"96\\" height=\\"96\\" style=\\"display: block;\\" /></td>
            <td style=\\"padding: 0 0 0 0;\\">
              <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\">
                <tr>
                  <td style=\\"padding: 0 0 0 0;\\">
                    some product
                  </td>
                <tr>
                  <td style=\\"padding: 0 0 0 0;\\">
                    US $12,00
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </td>
    </tr>"
`;
